# Delta-chan

./: .env  .gitignore  README.md  config.py  discloud.config  main.py  pyproject.toml  requirements.txt
cogs/: __init__.py  automod.py  commandsError.py  help.py  moderation.py  mongo.py  purge.py  reminders.py  social.py
events/: listeners.py  tasks_running.py
helpers/: activity.json  checks.py  converters.py  emojis.json  utils.py
src/assets/: links.json
src/views/: SocialViews.py  automod_views.py  moderation_views.py
